Added new job to import click events from minio